--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
   },
   "dependencies": {
     "commander": "^14.0.2",
-    "globby": "^15.0.0"
+    "globby": "^15.0.0",
+    "ora": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
-    "tsx": "^4.20.6",
     "tsdown": "^0.15.11",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
